remove project id
