# pkg/db/types.go
@@ -7,19 +7,19 @@ import (
 // ProjectInfoHandler ...
 type ProjectInfoHandler interface {
 	Add(ent *model.ProjectInfo) error
-	Delete(id string) error
+	Delete(name string) error
 	GetList() ([]string, error)
-	Get(id string) (*model.ProjectInfo, error)
+	Get(name string) (*model.ProjectInfo, error)
 	Update(ent *model.ProjectInfo) error
 }
 
 // UserInfoHandler ...
 type UserInfoHandler interface {
 	Add(ent *model.UserInfo) error
-	Delete(projectID string, userID string) error
-	GetList(projectID string) ([]string, error)
-	Get(projectID string, userID string) (*model.UserInfo, error)
+	Delete(projectName string, userID string) error
+	GetList(projectName string) ([]string, error)
+	Get(projectName string, userID string) (*model.UserInfo, error)
 	Update(ent *model.UserInfo) error
-	GetIDByName(projectID string, userName string) (string, error)
-	DeleteProjectDefine(projectID string) error
+	GetIDByName(projectName string, userName string) (string, error)
+	DeleteProjectDefine(projectName string) error
 }
